--- a/src/shared/components/header/Header.module.css
+++ b/src/shared/components/header/Header.module.css
@@ -32,7 +32,7 @@
                 color: var(--color-dawn-pink);
                 text-decoration: none;
                 text-transform: uppercase;
-                letter-spacing: 2px;
+                letter-spacing: 1.5px;
                 transition: opacity 0.2s ease;
 
                 @media (--layout-lte-medium) {
@@ -80,7 +80,7 @@
                 color: unset;
                 text-decoration: none;
                 text-transform: uppercase;
-                letter-spacing: 2px;
+                letter-spacing: 1.5px;
 
                 @media (--layout-lte-medium) {
                     font-size: 1.1rem;
